--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,15 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - "README.md"
+      - ".gitignore"
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - "README.md"
+      - ".gitignore"
 jobs:
   test:
     strategy:
