--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     paths-ignore:
       - "README.md"
       - ".gitignore"
-  pull_request:
+  pull_request_target:
     branches:
       - main
     paths-ignore:
