--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,36 +85,21 @@ jobs:
       #----------------------------------------------
       #    run test suite
       #----------------------------------------------
+      - name: Run unit tests
+        run: |
+          source .venv/bin/activate
+          pytest -v
       - name: Run tests with v2 keys
         env:
           IS_KEY_ID: ${{ secrets.IS_KEY_ID_V2 }}
           IS_KEY: ${{ secrets.IS_KEY_V2 }}
         run: |
           source .venv/bin/activate
-          pytest -v
-          python examples/ntp.py
+          for test in $(find examples -name \*.py -type f); do python ${test}; done
       - name: Run tests with v3 keys
         env:
           IS_KEY_ID: ${{ secrets.IS_KEY_ID_V3 }}
           IS_KEY: ${{ secrets.IS_KEY_V3 }}
         run: |
           source .venv/bin/activate
-          pytest -v
-          python examples/ntp.py
-      - name: Run timeseries tests with v2 keys
-        env:
-          IS_KEY_ID: ${{ secrets.IS_KEY_ID_V2 }}
-          IS_KEY: ${{ secrets.IS_KEY_V2 }}
-        run: |
-          source .venv/bin/activate
-          pytest -v
-          python examples/timeseries.py
-      - name: Run timeseries tests with v3 keys
-        env:
-          IS_KEY_ID: ${{ secrets.IS_KEY_ID_V3 }}
-          IS_KEY: ${{ secrets.IS_KEY_V3 }}
-        run: |
-          source .venv/bin/activate
-          pytest -v
-          python examples/timeseries.py
-      
+          for test in $(find examples -name \*.py -type f); do python ${test}; done
