--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ cryptography = ">37.0.2"
 requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.2"
-black = "^22.3.0"
+pytest = ">7.1.2"
+black = ">22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
