--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       #----------------------------------------------
       - run: python -m pip install black
       - run: |
-          black . --check
+          black . --check --diff
   test:
     strategy:
       fail-fast: true
