--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
+          version: "1.5.1"
       #----------------------------------------------
       #       load cached venv if cache exists
       #----------------------------------------------
