--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "intersight-auth"
-version = "0.2.4"
+version = "0.2.5"
 description = "Intersight Authentication helper for requests"
 authors = ["Chris Gascoigne <cgascoig@cisco.com>"]
 readme = "README.md"
@@ -8,12 +8,12 @@ repository = "https://github.com/cgascoig/intersight-auth"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-cryptography = "^37.0.2"
+cryptography = ">37.0.2"
 requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.1.2"
-black = "^22.3.0"
+pytest = ">7.1.2"
+black = ">22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
