--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 repository = "https://github.com/cgascoig/intersight-auth"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 cryptography = ">37.0.2"
 requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 pytest = ">7.1.2"
-black = ">22.3.0"
+black = ">=24.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
