--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+poetry.lock
+
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,macos,windows,pycharm,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,macos,windows,pycharm,python
 
