--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ black = ">=24.8.0"
 
 [tool.poetry.group.dev.dependencies]
 responses = "^0.25.3"
+types-requests = "^2.32.0.20241016"
+types-oauthlib = "^3.2.0.20240806"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
