--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Chris Gascoigne", email="cgascoig@cisco.com"},
 ]
 readme = "README.md"
-requires-python = "^3.8"
+requires-python = "^3.9"
 dynamic = ["dependencies"]
 
 [project.urls]
@@ -22,7 +22,7 @@ responses = "^0.25.3"
 types-requests = "^2.32.0.20241016"
 types-oauthlib = "^3.2.0.20240806"
 pytest = ">7.1.2"
-black = {version = "*", python = "^3.9"}
+black = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
