--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Chris Gascoigne", email="cgascoig@cisco.com"},
 ]
 readme = "README.md"
-requires-python = "^3.9"
+requires-python = ">=3.9"
 dynamic = ["dependencies"]
 
 [project.urls]
